--- a/p1-9-oo-3.ipynb
+++ b/p1-9-oo-3.ipynb
@@ -30,11 +30,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class Dog():\n",
+    "    kind = ''\n",
+    "    def __init__(self, name):\n",
+    "        self.n = name\n",
+    "    def bark(self):\n",
+    "        return 'woof'\n",
+    "\n",
+    "a = Dog('Quin')\n",
+    "b = Dog('Wuin')"
    ]
   },
   {
@@ -63,47 +71,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'canidae'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "# 类变量可以通过 class object 来访问，并在所有实例变量之间共享\n",
+    "Dog.kind = \"canidae\"\n",
+    "a.kind"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'canidae'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "b.kind"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Quin'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "a.n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Wuin'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "b.n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'woof'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "a.bark()"
    ]
   },
   {
@@ -134,38 +199,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class Cat:\n",
+    "    kind = 'felidae'\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "    def mew(self):\n",
+    "        return \"meow-meow\"\n",
+    "c = Cat('Garfield')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'felidae'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "c.kind"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Garfield'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "c.name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'meow-meow'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "c.mew()"
    ]
   },
   {
@@ -191,11 +295,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class Animal:\n",
+    "    kind = \"\"\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "    def voice(self):\n",
+    "        return \"...\""
    ]
   },
   {
@@ -209,11 +318,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class Dog(Animal):\n",
+    "    kind = \"canidea\"\n",
+    "    def voice(self):\n",
+    "        return 'woof'\n",
+    "    bark = voice"
    ]
   },
   {
@@ -225,11 +338,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class Cat(Animal):\n",
+    "    kind = 'Ganidea'\n",
+    "    def voice(self):\n",
+    "        return \"meow\"\n",
+    "    mew = voice"
    ]
   },
   {
@@ -241,20 +358,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "a = Animal('mini Q')\n",
+    "b = Dog('medium Q')\n",
+    "c = Cat('large Q')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mini Q ; ... ; \n",
+      "medium Q ; woof ; canidea\n",
+      "large Q ; meow ; Ganidea\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "for animal in [a, b, c]:\n",
+    "    print(animal.name, ';', animal.voice(), ';', animal.kind)"
    ]
   },
   {
@@ -318,7 +448,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
