--- a/p1-9-oo-3.ipynb
+++ b/p1-9-oo-3.ipynb
@@ -30,25 +30,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Dog():\n",
+    "class dog():\n",
     "    kind = ''\n",
-    "    def __init__(self, name):\n",
+    "    def __init__(self,name):\n",
     "        self.n = name\n",
     "    def bark(self):\n",
-    "        return 'woof'\n",
+    "        return \"woof\"\n",
     "\n",
-    "a = Dog('Quin')\n",
-    "b = Dog('Wuin')"
+    "a = dog('Quin')\n",
+    "b = dog('Wuin')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "上面这段代码逐行解释如下：\n",
     "* 第一行是关键字 `class` 打头，代表类定义的开始，后面是类的名字，然后是一个冒号，表示下面缩进的代码段是 `Dog` 类的定义；在 Python 中类本身也是个对象，叫**类对象**（*class object*）；\n",
     "    * 你现在能感觉到，Python 的冒号通常都是这个作用，前面看到过的 `if` `else` `for` `while` `def` 都类似；\n",
@@ -199,31 +200,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Cat:\n",
-    "    kind = 'felidae'\n",
+    "    kind = 'felidea'\n",
     "    def __init__(self, name):\n",
     "        self.name = name\n",
     "    def mew(self):\n",
-    "        return \"meow-meow\"\n",
+    "        return 'meow-meow'\n",
+    "\n",
     "c = Cat('Garfield')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'felidae'"
+       "'felidea'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +245,7 @@
        "'Garfield'"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +265,7 @@
        "'meow-meow'"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,16 +297,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Animal:\n",
-    "    kind = \"\"\n",
+    "    kind = ''\n",
     "    def __init__(self, name):\n",
     "        self.name = name\n",
     "    def voice(self):\n",
-    "        return \"...\""
+    "        return '...'"
    ]
   },
   {
@@ -318,14 +320,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Dog(Animal):\n",
-    "    kind = \"canidea\"\n",
+    "    kind = 'candidae'\n",
     "    def voice(self):\n",
-    "        return 'woof'\n",
+    "        return 'woof-woof'\n",
     "    bark = voice"
    ]
   },
@@ -338,15 +340,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Cat(Animal):\n",
-    "    kind = 'Ganidea'\n",
+    "    kind = \"felidae\"\n",
     "    def voice(self):\n",
-    "        return \"meow\"\n",
-    "    mew = voice"
+    "        return 'meow-meow'\n",
+    "    mew = voice\n",
+    "        "
    ]
   },
   {
@@ -358,33 +361,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = Animal('mini Q')\n",
-    "b = Dog('medium Q')\n",
-    "c = Cat('large Q')"
+    "a = Animal('what')\n",
+    "b = Cat('Garfield')\n",
+    "c = Dog('Snoopy')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mini Q ; ... ; \n",
-      "medium Q ; woof ; canidea\n",
-      "large Q ; meow ; Ganidea\n"
+      "what ; ...\n",
+      "Garfield ; meow-meow\n",
+      "Snoopy ; woof-woof\n"
      ]
     }
    ],
    "source": [
     "for animal in [a, b, c]:\n",
-    "    print(animal.name, ';', animal.voice(), ';', animal.kind)"
+    "    print(animal.name, ';', animal.voice())"
    ]
   },
   {
