--- a/p1-b-final.ipynb
+++ b/p1-b-final.ipynb
@@ -87,11 +87,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi, what is your name?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " quincy\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello, quincy\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "print('Hi, what is your name?')\n",
+    "name = input()\n",
+    "print(f'hello, {name}')"
    ]
   },
   {
@@ -103,11 +127,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "How are you today?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " good\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I'm feeling good too!\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "print('How are you today?')\n",
+    "feeling = input()\n",
+    "if 'good' in feeling:\n",
+    "    print(\"I'm feeling good too!\")\n",
+    "else:\n",
+    "    print('Sorry to hear that!')"
    ]
   },
   {
@@ -119,11 +170,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "How are you today?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " Good\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I'm feeling good too!\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "print('How are you today?')\n",
+    "feeling = input()\n",
+    "if 'good' in feeling.lower():\n",
+    "    print(\"I'm feeling good too!\")\n",
+    "else:\n",
+    "    print('Sorry to hear that!')"
    ]
   },
   {
@@ -135,11 +213,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "what is your favorite color\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " red\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "your favorite color is red, and my favorite color is yellow\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "import random\n",
+    "print('what is your favorite color')\n",
+    "user_color = input()\n",
+    "choice = ['red', 'orange', 'yellow', 'green', 'blue', 'indigo', 'purple']\n",
+    "print(f'your favorite color is {user_color}, and my favorite color is {random.choice(choice)}')"
    ]
   },
   {
@@ -191,11 +295,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "import time\n",
+    "class Bot:\n",
+    "    wait = 1\n",
+    "    def __init__(self):\n",
+    "        self.q = \"\"\n",
+    "        self.a = \"\"\n",
+    "    def _think(self, s):\n",
+    "        return s\n",
+    "    def run(self):\n",
+    "        time.sleep(Bot.wait)\n",
+    "        print(self.q)\n",
+    "        self.a = input()\n",
+    "        time.sleep(Bot.wait)\n",
+    "        print(self._think(self.a))"
    ]
   },
   {
@@ -218,7 +335,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class HelloBot(Bot):\n",
+    "    def __init__(self):\n",
+    "        self.q = \"Hi, what is your name?\"\n",
+    "    def _think(self, s):\n",
+    "        return f'Hello, {s}'"
    ]
   },
   {
@@ -227,7 +348,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class FeelingBot(Bot):\n",
+    "    def __init__(self):\n",
+    "        self.q = 'how are you today?'\n",
+    "    def _think(self, s):\n",
+    "        if 'good' in s.lower() or 'fine' in s.lower():\n",
+    "            return \"I'm feeling good too\"\n",
+    "        else:\n",
+    "            return \"Sorry to hear that\""
    ]
   },
   {
@@ -236,7 +364,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "import random\n",
+    "class ColorBot(Bot):\n",
+    "    def __init__(self):\n",
+    "        self.q = 'what is your favorite color?'\n",
+    "    \n",
+    "    def _think(self, s):\n",
+    "        choice_color = ['red', 'yellow', 'white', 'green', 'gray']\n",
+    "        return f\"your favorite color is {s}, and my favorite color is {random.choice(choice_color)}\""
    ]
   },
   {
@@ -252,11 +387,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class Garfield:\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "\n",
+    "        self.bots = []\n",
+    "        \n",
+    "    def add(self, bot):\n",
+    "        self.bots.append(bot)\n",
+    "        \n",
+    "    def _prompt(self, s):\n",
+    "        print(s)\n",
+    "        print()\n",
+    "        \n",
+    "    def run(self):\n",
+    "        self._prompt(\"This is Garfield dialog system. Let's talk.\")\n",
+    "        for bot in self.bots:\n",
+    "            bot.run()"
    ]
   },
   {
@@ -274,11 +425,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is Garfield dialog system. Let's talk.\n",
+      "\n",
+      "Hi, what is your name?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " hh\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, hh\n",
+      "how are you today?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " not bad\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorry to hear that\n",
+      "what is your favorite color?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " red\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "your favorite color is red, and my favorite color is white\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "#创建一个聊天延时ls的对话系统\n",
+    "garfield = Garfield()\n",
+    "#向其中加入我们已经定义好的各个对话bot的对象实例\n",
+    "garfield.add(HelloBot())\n",
+    "garfield.add(FeelingBot())\n",
+    "garfield.add(ColorBot())\n",
+    "#运行\n",
+    "garfield.run()"
    ]
   },
   {
@@ -324,7 +536,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "from time import sleep\n",
+    "from termcolor import colored\n",
+    "\n",
+    "class Bot():\n",
+    "    wait = 1\n",
+    "    def __init__(self):\n",
+    "        self.q = \"\"\n",
+    "        self.a = \"\"\n",
+    "    def _think(self, s):\n",
+    "        return s\n",
+    "    def _format(self, s):\n",
+    "        return colored(s, 'blue')\n",
+    "    def run(self):\n",
+    "        sleep(Bot.wait)\n",
+    "        print(self._format(self.q))\n",
+    "        self.a = input()\n",
+    "        sleep(Bot.wait)\n",
+    "        print(self._format(self._think(self.a)))\n",
+    "        "
    ]
   },
   {
@@ -356,7 +586,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "from simpleeval import simple_eval\n",
+    "class ComputBot(Bot):\n",
+    "    def __init__(self):\n",
+    "        self.q = 'Through recent upgrade I can do calculation now. Input some arithmetic expression to try:'\n",
+    "    def _think(self, s):\n",
+    "        result = simple_eval(s)\n",
+    "        return f'Done. Result is {result}'"
    ]
   },
   {
@@ -372,7 +608,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "garfield = Garfield()\n",
+    "garfield.add(HelloBot())\n",
+    "garfield.add(ComputBot())\n",
+    "garfield.run()"
    ]
   },
   {
